# ev-mcp-kr

./: .dockerignore  .env.example  .gitignore  .mcpbignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  manifest-windows-wsl.json  manifest.json  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: mcp-tool-author.md  phase-orchestrator.md  python-builder.md  quality-gate.md  spec-auditor.md  workers-builder.md
.claude/commands/: phase-cycle.md  (+6 more)
.cursor/: mcp.json
docs/: ARCHITECTURE.md  PHASE1.md  PHASE10.md  PHASE11.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE9.md  PLAN.md  PRIVACY.md  SUPPORT.md  WORKFLOW.md
scripts/: build_docs_html.py  build_mcpb.sh  build_trends_summary.py  extract_sigungu.py  healthcheck.py  publish_web_snapshot.py  publish_web_timeseries.py  refresh_web.sh  sync_chargers.py  synthesize_snapshots.py
tests/: conftest.py  test_analytics.py  test_analytics_inventory_trend.py  test_analytics_snapshot_diff.py  test_cache.py  test_client.py  test_geocode.py  test_logging.py  test_models.py  test_redact.py  test_server.py  test_snapshot.py  test_store.py  test_sync.py  test_tools_analytics_operator_health.py  test_tools_analytics_regional_density.py  test_tools_codes.py  test_tools_nearby.py  test_tools_operator.py  test_tools_region.py  test_tools_station.py  test_tools_status.py
web/: README.md  app.js  index.html  styles.css  theme.js  trends.html  trends.js
workers/: .gitignore  DEPLOY.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
(+103 files in other folders)
